--- a/src/pages/user.page/user.form.fields/style.module.css
+++ b/src/pages/user.page/user.form.fields/style.module.css
@@ -1,52 +1,52 @@
 .container_form {
-    display: flex;
-    flex-direction: column;
-    /* width: 760px; */
-    width: 60%;
-    height: 100%;
-    border-radius: 16px;
-    padding: 30px;
-    gap: 40px;
-    background-color: #FDFDFD;
+  display: flex;
+  flex-direction: column;
+  /* width: 760px; */
+  width: 60%;
+  height: 100%;
+  border-radius: 16px;
+  padding: 30px;
+  gap: 40px;
+  background-color: #fdfdfd;
 }
 .form {
-    width: 80%;
-    /* height: 800px; */
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  width: 80%;
+  /* height: 800px; */
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 .wrapper_feedback {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    inset: 0;
-    background: rgb(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  inset: 0;
+  background: rgb(0, 0, 0, 0.4);
 }
 
 .error_message {
-    font-size: 15px;
-    font-weight: 500;
-    color: #b01c1c;
+  font-size: 15px;
+  font-weight: 500;
+  color: #b01c1c;
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 600px) {
-    .container_form {
-        margin-top: 40px;
-        width: 90%;
-        height: 100%;
-    }
-    .form {
-        width: 100%;
-        /* height: 660px; */
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-    }
+  .container_form {
+    margin-top: 40px;
+    width: 90%;
+    height: 100%;
+  }
+  .form {
+    width: 100%;
+    /* height: 660px; */
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
 }
