--- a/src/pages/user.page/user.setting.box/style.module.css
+++ b/src/pages/user.page/user.setting.box/style.module.css
@@ -1,59 +1,59 @@
 .container_setting {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* width: 360px; */
-    width: 35%;
-    height: 100%;
-    background-color: #FDFDFD;
-    border-radius: 16px;
-    padding: 40px;
-    gap: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 360px; */
+  width: 35%;
+  height: 100%;
+  background-color: #fdfdfd;
+  border-radius: 16px;
+  padding: 40px;
+  gap: 40px;
 }
 
 .image {
-    width: 280px;
-    height: 485px;
-    object-fit: cover;
-    border-radius: 8px;
+  width: 280px;
+  height: 485px;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .box_categories {
-    display: flex;
-    flex-direction: column;
-    width: 280px;
-    height: 208px;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  height: 208px;
+  gap: 24px;
 }
 .box_categories .category:nth-child(1) {
-    color: #161616;
-    font-weight: 600;
+  color: #161616;
+  font-weight: 600;
 }
 
 .category {
-    width: 100%;
-    height: 34px;
-    border-bottom: 1px solid #DADADA;
-    gap: 12px;
+  width: 100%;
+  height: 34px;
+  border-bottom: 1px solid #dadada;
+  gap: 12px;
 
-    font-size: 16px;
-    font-weight: 500;
-    color: #9C9C9C;
+  font-size: 16px;
+  font-weight: 500;
+  color: #9c9c9c;
 }
 
 @media (max-width: 600px) {
-    .container_setting {
-        width: 90%;
-        padding: 28px;
-        gap: 24px;
-    }
-    .image {
-        width: 85%;
-        height: 187px;
-    }
-    .box_categories {
-        width: 85%;
-        height: 168px;
-        gap: 20px;
-    }
+  .container_setting {
+    width: 90%;
+    padding: 28px;
+    gap: 24px;
+  }
+  .image {
+    width: 85%;
+    height: 187px;
+  }
+  .box_categories {
+    width: 85%;
+    height: 168px;
+    gap: 20px;
+  }
 }
