--- a/src/shared/ui/button/style.module.css
+++ b/src/shared/ui/button/style.module.css
@@ -1,30 +1,29 @@
 .btn {
-    /* text-align: center; */
-    border-radius: 50px;
-    font-family: Manrope;
-    border: none;
-    background-color: #161616;
-    color: #FDFDFD;
-    font-size: 16px;
-    font-weight: 600;
-    width: 170px;
-    height: 46px;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
+  /* text-align: center; */
+  border-radius: 50px;
+  font-family: Manrope;
+  border: none;
+  background-color: #161616;
+  color: #fdfdfd;
+  font-size: 16px;
+  font-weight: 600;
+  width: 170px;
+  height: 46px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .btn:hover {
-    background-color: #F4F4F4;
-    color: #595959;
-    font-weight: 600;
-    transition: all 0.3s ease-in-out;
+  background-color: #f4f4f4;
+  color: #595959;
+  font-weight: 600;
+  transition: all 0.3s ease-in-out;
 }
 
-
 @media (max-width: 600px) {
-    .btn {
-        width: 100%;
-        height: 44px;
-        font-size: 14px;
-    }
+  .btn {
+    width: 100%;
+    height: 44px;
+    font-size: 14px;
+  }
 }
