--- a/src/shared/ui/feedback/style.module.css
+++ b/src/shared/ui/feedback/style.module.css
@@ -1,25 +1,25 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 350px;
-    height: 211px;
-    background-color: #FDFDFD;
-    border-radius: 16px;
-    padding: 20px;
-    gap: 20px;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 211px;
+  background-color: #fdfdfd;
+  border-radius: 16px;
+  padding: 20px;
+  gap: 20px;
+  position: relative;
 }
 .container .close {
-    position: absolute;
-    cursor: pointer;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  cursor: pointer;
+  top: 10px;
+  right: 10px;
 }
 .message {
-    font-size: 20px;
-    font-weight: 600;
-    color: #595959;
-    text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: #595959;
+  text-align: center;
 }
