--- a/src/shared/ui/title/style.module.css
+++ b/src/shared/ui/title/style.module.css
@@ -1,14 +1,13 @@
-
 .container {
-    display: flex;
-    width: 100%;
-    height: 49px;
-    background-color: transparent;
-    border-bottom: 1px solid #DADADA;
+  display: flex;
+  width: 100%;
+  height: 49px;
+  background-color: transparent;
+  border-bottom: 1px solid #dadada;
 }
 
 h2 {
-    font-size: 24px;
-    font-weight: 600;
-    color: #161616;
+  font-size: 24px;
+  font-weight: 600;
+  color: #161616;
 }
